--- a/WPFUI/Views/MainWindow.xaml
+++ b/WPFUI/Views/MainWindow.xaml
@@ -28,10 +28,26 @@
                        VerticalAlignment="Center"
                        HorizontalAlignment="Left"
                        Foreground="{StaticResource Foreground}"
-                       FontSize="22" Margin="20,0,0,0"/>
-            
+                       FontSize="28" Margin="20,0,0,0"/>
+            <Image Source="/Resources/project-icon.png" 
+                   HorizontalAlignment="Right"
+                   Height="30"
+                   Margin="0,0,10,0" Stretch="Uniform"
+                   RenderOptions.BitmapScalingMode="HighQuality"/>
+            <TextBox Width="250"
+                     Grid.Column="1"
+                     HorizontalAlignment="Left"
+                     Margin="50, 0, 0, 0"
+                     Style="{StaticResource RoundedTextBox}"
+                     Tag="Search"/>
+
             <StackPanel Grid.Row="1" Grid.Column="0">
-                
+                <RadioButton Content="Buttons"
+                             Style="{StaticResource MenuButtonTheme}"/>
+                <RadioButton Content="Text"
+                             Style="{StaticResource MenuButtonTheme}"/>
+                <RadioButton Content="ListViews"
+                             Style="{StaticResource MenuButtonTheme}"/>
             </StackPanel>
         </Grid>
 
