--- a/WPFUI/Themes/ColorTheme.xaml
+++ b/WPFUI/Themes/ColorTheme.xaml
@@ -7,5 +7,9 @@
     <SolidColorBrush x:Key="GreyForeground">#8C8C88</SolidColorBrush>
     <SolidColorBrush x:Key="Accent">#0FA0C1</SolidColorBrush>
     <SolidColorBrush x:Key="DarkAccent">#213237</SolidColorBrush>
-    <SolidColorBrush x:Key="AccentNegative">#A64444</SolidColorBrush>
+    <SolidColorBrush x:Key="AccentNegative">#A64444</SolidColorBrush> 
+    
+    <SolidColorBrush x:Key="Red">#A64444</SolidColorBrush>
+    <SolidColorBrush x:Key="Green">#1F8C4E</SolidColorBrush>
+    <SolidColorBrush x:Key="Blue">#0FA0C1</SolidColorBrush>
 </ResourceDictionary>
