--- a/WPFUI/App.xaml
+++ b/WPFUI/App.xaml
@@ -2,6 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:WPFUI"
+             xmlns:viewModel="clr-namespace:WPFUI.ViewModels"
+             xmlns:view="clr-namespace:WPFUI.Views"
              StartupUri="Views/MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
@@ -9,8 +11,10 @@
                 <ResourceDictionary Source="Themes/ColorTheme.xaml"/>
                 <ResourceDictionary Source="Themes/MenuButtonTheme.xaml"/>
                 <ResourceDictionary Source="Themes/TextBoxTheme.xaml"/>
+                <ResourceDictionary Source="Themes/DefaultButtonTheme.xaml"/>
+                <ResourceDictionary Source="Themes/DefaultUserControlTheme.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
-
     </Application.Resources>
 </Application>
+
