--- a/WPFUI/Themes/TextBoxTheme.xaml
+++ b/WPFUI/Themes/TextBoxTheme.xaml
@@ -26,7 +26,7 @@
                                        HorizontalAlignment="Left"
                                        Margin="10,0,0,0"
                                        FontSize="15"
-                                       Foreground="DarkGray"
+                                       Foreground="{StaticResource GreyForeground}"
                                        Grid.Column="1">
                                 <TextBlock.Style>
                                     <Style TargetType="{x:Type TextBlock}">
