--- a/WPFUI/Views/PrimitiveControlsPageView.xaml
+++ b/WPFUI/Views/PrimitiveControlsPageView.xaml
@@ -13,26 +13,62 @@
     </UserControl.DataContext>-->
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="280"/>
+            <ColumnDefinition Width="auto"/>
             <ColumnDefinition Width="auto"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
         <Grid.RowDefinitions>
-            <RowDefinition Height="320"/>
+            <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <Border Grid.Row="0" Grid.Column="0" Margin="20"
-                    CornerRadius="10" 
-                    HorizontalAlignment="Left"
-                    Background="{StaticResource Background}">
+
+        <!-- Registration panel -->
+        <Border x:Name="panelRegistration"
+                Grid.Row="0" Grid.Column="0" Margin="0,0,0,20"
+                CornerRadius="10" Width="180"
+                HorizontalAlignment="Left"
+                Padding="10,0"
+                Background="{StaticResource Background}">
+            <StackPanel>
+                <TextBlock Text="Register"
+                   Margin="0, 10" FontSize="20"
+                   TextWrapping="WrapWithOverflow"/>
+
+                <TextBox x:Name="textBoxName" 
+                         HorizontalAlignment="Stretch"  
+                         Style="{StaticResource RoundedTextBox}"
+                         Text="{Binding Name, Mode=TwoWay}"
+                         Tag="Name" Margin="0, 5"/>
+
+                <TextBox x:Name="textBoxSurname" 
+                        HorizontalAlignment="Stretch"
+                        Style="{StaticResource RoundedTextBox}"
+                        Text="{Binding Surname, Mode=TwoWay}"
+                        Tag="Surname" Margin="0,5"/>
+                <CheckBox x:Name="checkBoxAgree" Margin="0,5" FontSize="12" Content=" Agree with everything"/>
+                <Button HorizontalAlignment="Stretch"
+                        Margin="0,70,0,0" Click="submit_Click"
+                        VerticalAlignment="Bottom">
+                    Submit
+                </Button>
+
+            </StackPanel>
+        </Border>
+
+        <!-- Creative color panel -->
+        <Border x:Name="panelCreativeColors" 
+                Grid.Row="0" Grid.Column="1" Margin="20,0,0,20"
+                CornerRadius="10" Width="180"
+                HorizontalAlignment="Left"
+                Background="{StaticResource Background}">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="10"/>
                     <ColumnDefinition Width="auto"/>
-                    <ColumnDefinition Width="auto"/>
                     <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="10"/>
                 </Grid.ColumnDefinitions>
 
                 <Grid.RowDefinitions>
@@ -49,43 +85,82 @@
                    Margin="0, 10" FontSize="20"
                    TextWrapping="WrapWithOverflow"/>
                 <Button Grid.Row="1" Grid.Column="1" Margin="0, 10" Click="buttonBlue_Click"
-                        Width="120" Height="30">
+                        Width="110" Height="30">
                     Blue
                 </Button>
-                <Border x:Name="buttonBlue" Grid.Row="1" Grid.Column="2"
+                <Border x:Name="borderBlue" Grid.Row="1" Grid.Column="2"
                     Background="{StaticResource Blue}"
-                    Width="40" Height="40"
+                    Width="30" Height="30"
                     CornerRadius="10"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Center"
-                    Margin="10, 0"/>
+                    Margin="10,0,0,0"/>
 
-                <Button x:Name="buttonRed" Grid.Row="2" Grid.Column="1" Margin="0, 10" Click="buttonRed_Click"
-                        Width="120" Height="30">
+                <Button Grid.Row="2" Grid.Column="1" Margin="0, 10" Click="buttonRed_Click"
+                        Width="110" Height="30">
                     Red
                 </Button>
-                <Border Grid.Row="2" Grid.Column="2"
+                <Border x:Name="borderRed"
+                        Grid.Row="2" Grid.Column="2"
                     Background="{StaticResource Red}"
-                    Width="40" Height="40"
+                    Width="30" Height="30"
                     CornerRadius="10"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Center"
-                    Margin="10, 0"/>
+                    Margin="10,0,0,0"/>
 
-                <Button x:Name="buttonGreen" Grid.Row="3" Grid.Column="1" Margin="0, 10" Click="buttonGreen_Click"
-                        Width="120" Height="30">
+                <Button Grid.Row="3" Grid.Column="1" 
+                        Margin="0, 10" Click="buttonGreen_Click"
+                        Width="110" Height="30">
                     Green
                 </Button>
-                <Border Grid.Row="3" Grid.Column="2"
+                <Border x:Name="borderGreen"
+                        Grid.Row="3" Grid.Column="2"
                     Background="{StaticResource Green}"
-                    Width="40" Height="40"
+                    Width="30" Height="30"
                     CornerRadius="10"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Center"
-                    Margin="10, 0"/>
-                <TextBlock Text="{Binding CreativeColorOutput}" Grid.Row="4" Grid.Column="1"/>
+                    Margin="10,0,0,0"/>
+                <TextBlock Text="{Binding CreativeColorOutput}" 
+                           Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="2"
+                           TextWrapping="WrapWithOverflow" Height="50"
+                           Foreground="{StaticResource GreyForeground}"/>
             </Grid>
         </Border>
-            
+        
+        <!-- Color Amplification Panel-->
+        <Border x:Name="panelColorAmplification" 
+                Grid.Row="0" Grid.Column="2" Margin="20,0,0,20"
+                CornerRadius="10"
+                HorizontalAlignment="Stretch"
+                Padding="10,0"
+                Background="{StaticResource Background}">
+            <Grid ScrollViewer.HorizontalScrollBarVisibility="Disabled">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="auto"/>
+                </Grid.RowDefinitions>
+                <TextBlock Text="Would you be so kind as to politely ''amplify'' your chosen creative color, please"
+                           Grid.Row="0" Grid.Column="1" Margin="0, 10" FontSize="18"
+                           TextWrapping="Wrap"/>
+                <Border x:Name="borderChosenCreativeColor"
+                        Grid.RowSpan="4"
+                        Background="{StaticResource Green}"
+                        Width="20" Height="20"
+                        CornerRadius="10"
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center"/>
+
+                <Slider Grid.Row="3" Margin="0,10"/>
+            </Grid>
+        </Border>
+
     </Grid>
 </UserControl>
